z-index correction

--- a/src/app/navbar/navbar.component.css
+++ b/src/app/navbar/navbar.component.css
@@ -186,7 +186,7 @@ transition-timing-function: cubic-bezier(0.45, 1.64, 0.47, 0.66);
 
   .nav-links.mobile-menu {
     margin-left: 0;
-
+    z-index: 999;
 }
 
 
@@ -195,6 +195,7 @@ transition-timing-function: cubic-bezier(0.45, 1.64, 0.47, 0.66);
     display: flex;
     flex-direction: column;
     align-items: center;
+    
   }
   .navbar .nav-links ul li {
    margin: 25px 0;
@@ -220,6 +221,7 @@ transition-timing-function: cubic-bezier(0.45, 1.64, 0.47, 0.66);
   .navbar .toggle{
     display: flex;
     position: fixed;
+    z-index: 999;
   }
 
   
